--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,28 @@ header{
 }
 
 
+/* section awards */
+.awards{
+	padding-top: 5%;
+	padding-bottom: 5%;
+}
+
+.awards h2:after{
+	width: 100px;
+	height: 2px;
+	background-color: #e67e22;
+	display: block;
+	margin: 0 auto;
+	margin-top: 2%;
+	margin-bottom: 2%;
+	content: " ";
+}
+
+.award{
+	margin-top: 10%;
+}
+
+
 
 
 
