--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 /* Global styling */
+@import url('https://fonts.googleapis.com/css?family=Roboto:100, 300, 400, 500, 700');
+
 *{
 	margin: 0;
 	padding: 0;
@@ -11,6 +13,14 @@ body{
 }
 
 /* Navbar */
+header .navbar{
+	z-index: 1000;
+	background: none !important;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
 .navbar-brand img{
 	height: 100px;
 }
@@ -36,15 +46,9 @@ body{
 
 
 /* Hero styling */
-header{
-	background: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url('../img/slider/header5.jpg') center;
-	height: 100vh;
-	background-attachment: fixed;
-	background-size: cover;
-}
 
 .hero-text{
-	margin-top: 10%;
+	margin-top: 15%;
 	color: #fff;
 	text-transform: uppercase;
 }
@@ -69,6 +73,24 @@ header{
 .btn-about:hover{
 	background-color: #e67e22;
 	transition: all 0.5s ease-in;
+}
+
+header .carousel-inner .carousel-item img{
+	margin: auto;
+	height: 100vh;
+	width: 100%;
+}
+
+.main-text
+{
+    position: absolute;
+    color: #FFF;
+    top: 0;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
 }
 
 
@@ -99,6 +121,10 @@ header{
 	width: 90%;
 }
 
+#home-features p{
+	top: 0;
+}
+
 
 
 /* Testimonials */
@@ -126,7 +152,7 @@ header{
 	bottom: -5%;
 }
 
-.carousel-inner img{
+.testimonials .carousel-inner img{
 	height: 150px;
 	border: 2px solid #e67e22;
 	margin-top: 5%;
@@ -154,6 +180,7 @@ header{
 
 .award{
 	margin-top: 10%;
+	text-align: center;
 }
 
 
@@ -167,13 +194,26 @@ header{
 @media only screen and (max-width: 768px){
 
 	.hero-text{
-		margin-top: 20%;
+		margin-top: 50%;
 		color: #fff;
 		text-transform: uppercase;
 	}
 
 	.hero-btns{
 		margin-top: 20%;
+	}
+	header .carousel-inner .carousel-item img{
+		margin: auto;
+		height: 100vh;
+		width: 100%;
+	}
+
+	header .carousel-caption h3{
+		font-size: 2em;
+	}
+
+	header .carousel-caption p{
+		font-size: 1em;
 	}
 }
 
